Bug 186090 - Personal Cron -> New Task, Modify have many input field errors
Summary: Personal Cron -> New Task, Modify have many input field errors
Status: RESOLVED FIXED
Alias: None
Product: kcron
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Gary Meyer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-04 01:35 UTC by rcbell
Modified: 2010-10-20 02:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rcbell 2009-03-04 01:35:17 UTC
Version:           KDE 4.2 (using KDE 4.2.0)
OS:                Linux
Installed from:    SuSE RPMs

1. When typing in a command in the "Command" text entry box on the New Task for a Personal Cron job, the focus is intermittently shifted to the other widgets on the GUI as I typed. For example, I tried to enter,  echo "this is a test"
and upon clicking the space bar the focus jumped to the Months widget and selected January.  
This problem went away after I set the cursor back into the command text box a few times when the focus jumped away.

2. After I created a personal cron job, I selected the job and clicked  the Modify button.  The "Comments" text box contained additional comments that I did not put in there, as follows:
 DO NOT EDIT THIS FILE - edit the master and reinstall.
 (/tmp/kde-rcbell/systemsettingsa17273.tmp installed on Tue Mar  3  17:26:03 2009)
 (Cron version V5.0 -- $Id: crontab.c,v 1.12 2004/01/23 18:56:42  vixie Exp $)
my synching of tomboy dirs every morning at 2:00am

The last line, "my synching of tomboy..." is the only line I put into the comment box.

3. Also, when modifying an existing job, the original settings of the job are lost when entering the "Add or modify a scheduled task" panel. Only the command and comments (with the additional comments from #2) reflect the existing job.  The Enable and Run checkboxes, and the month/day/time/etc are all reset to nothing selected.  They should be set to the original settings of the existing job.
Comment 2 Christoph Feck 2010-10-20 02:35:26 UTC
1. is a duplicate of bug 236581
2. will be fixed in next commit
3. is a duplicate of bug 189108
Comment 3 Christoph Feck 2010-10-20 02:37:03 UTC
SVN commit 1187656 by cfeck:

Skip comments not written by kcron

BUG: 186090


 M  +6 -0      ctcron.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1187656