Skip comments not written by kcron

BUG: 186090

svn path=/trunk/KDE/kdeadmin/kcron/; revision=1187656